<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/candidato_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:scrollbarSize="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nombre del aspirante*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_nombre_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Edad*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edad_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Teléfono*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_telefono_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Correo Electrónico*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_correo_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pais">

            <AutoCompleteTextView
                android:id="@+id/register_pais_candidato"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="text"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ciudad*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_ciudad_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Idiomas*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_idiomas_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputTraits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Rasgos Personales*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_rasgos_personales_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Contraseña*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_pasw_1_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirmar Contraseña*">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_pasw_2_candidato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegisterCandidato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse" />

        <Button
            android:id="@+id/buttonCancelRegisterCandidato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>
</ScrollView>